[package]
name = "bpf_playground-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
bpf_playground-common = { path = "../bpf_playground-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "bpf_playground"
path = "src/main.rs"
